# FileCompressionSystem

./: CMakeLists.txt  README.md
frontend/: frontend.cpp  main.cpp
include/algorithms/: ArithmeticCoding.h  LZW.h  RLE.h  deflate.h  huffman.h  lz77.h
include/datastructures/: HashTable.h  HuffmanNode.h  MinHeapTree.h  Trie.h  TrieNode.h
include/utils/: FileIO.h
resources/TestFiles/compressed/: CompressedFileOutofDeflate.deflate  CompressedFileOutofLZ77.lz77  CompressedFileOutofLZW.lzw  CompressedFileOutofRLE.rle  CompressedFileOutofTestHuffman_1.huff
resources/TestFiles/uncompressed/: UncompressedFileOutofLZ77.txt  UncompressedFileOutofLZW.txt  UncompressedFileOutofRLE.txt  uncompressed_2.txt  uncompressed_3.txt  uncompressed_4.txt
src/algorithms/: ArithmeticCoding.cpp  LZW.cpp  RLE.cpp  deflate.cpp  huffman.cpp  lz77.cpp
src/datastructures/: HashTable.cpp  HuffmanNode.cpp  MinHeap.cpp  trie.cpp
src/utils/: FileIO.cpp
tests/: TestArithmetic.cpp  TestDeflate.cpp  TestHuffman.cpp  TestLZW.cpp  TestRLE.cpp  Testlz77.cpp
